# email_checker

./: .eslintrc.json  .gitignore  BELGIUM_FRANCE_TEST_REPORT.md  BLOCKLIST_CHECKLIST.md  BLOCKLIST_FIXES_APPLIED.md  BLOCKLIST_IMPORT_GUIDE.md  BLOCKLIST_QUICKSTART.md  BULK_EDIT_INTEGRATION_SUMMARY.md  BULK_EDIT_QUICK_START.md  BULK_LISTS_IMPLEMENTATION_SUMMARY.md  BULK_UPDATE_API.md  CACHE_FIX.md  CLAUDE.md  COMPACT_SWITCHER_UPDATE.md  COMPLETED_MIGRATION.md  CONVERSATION_SUMMARY.md  CRITICAL_FIXES_REPORT.md  DEBUG_EMAIL_MANAGER.md  DEBUG_SEARCH_PROBLEM.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DOMAINS_EXTRACTION_SUMMARY.md  DOMAIN_VALIDATION_GUIDE.md  DUPLICATE_ID_FIX.md  EMAIL_LIST_IMPLEMENTATION_SUMMARY.md  ENDPOINT_FLOW_DIAGRAM.md  EXCLUSION_ANALYSIS_REPORT.md  FILE_UPLOAD_ARCHITECTURE.md  FILE_UPLOAD_TESTING_GUIDE.md  FILTER_WIZARD_API_INTEGRATION.md  FILTER_WIZARD_FLOW.md  FINAL_EMAIL_LIST_INTEGRATION.md  FINAL_SUMMARY.md  FIX_FILTER_WIZARD_SUMMARY.md  FUNCTIONAL_OVERVIEW.md  HOTKEYS_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_SWITCHER_GUIDE.md  INTERFACE_SWITCH_BUTTONS.md  (+184 more)
.claude/: settings.local.json
configs/: italy_powder_metallurgy.json  switzerland_hydraulics.json
configs_backup/: czech_powder_metal.json  france_powder_metal.json  germany_hydraulics.json  italy_hydraulics.json  poland_powder_metal.json  spain_powder_metal.json  uk_business_exclusions.json
email_checker_core/: __init__.py  blocklist.py  cache.py  checker.py  config.py  reporting.py  validation.py
mcp_server/: email_checker_mcp.py  pyproject.toml
(+234 files in other folders)
